--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Mixer</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <h1>Welcome to the Party!</h1>
 
 
-
-
+    <script src="js/main.js"></script>
 </body>
 
 </html>
